# ros-examples-non-shared-private

sr_private_library/: CMakeLists.txt  package.xml
sr_private_library/include/sr_private_library/: string_utils.h
sr_private_library/src/: private_class.cpp  string_utils.cpp
